<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClockTime</string>
    <string name="action_settings">Settings</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="button_calculate_log">Calculate time on log</string>
    <string name="button_calculate_act">Calculate actual time</string>
    <string name="colon">:</string>
    <string name="clock_in">Clock in:</string>
    <string name="clock_out">Clock out:</string>
    <string name="title_activity_display_results">DisplayResults</string>
    <string name="hello_world">Hello world!</string>

</resources>
